--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@codekraft-studio/vue-animated",
+  "name": "@rozhkovv/vue-animated",
   "description": "Functional animation components using Animate.css",
-  "version": "0.1.5",
+  "version": "0.1.72",
   "main": "dist/VueAnimated.umd.js",
   "homepage": "https://codekraft-studio.github.io/vue-animated/",
-  "repository": "codekraft-studio/vue-animated",
+  "repository": "rozhkovv/vue-animated",
   "files": [
     "dist"
   ],
@@ -29,7 +29,7 @@
     "transitions"
   ],
   "dependencies": {
-    "animate.css": "^3.4.0",
+    "animate.css": "^4.0",
     "vue": "^2.2.0"
   },
   "devDependencies": {
